# s3-crc

./: .gitignore  Cargo.toml  LICENSE  README.md  Taskfile.yml  build.rs  go.mod  main.go  versioninfo.json
src/: main.rs
